--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue",
   "version": "4.4.0",
   "description": "A magical vue admin. An out-of-box UI solution for enterprise applications. Newest development stack of vue. Lots of awesome features",
-  "author": "Pan <panfree23@gmail.com>",
+  "author": "ZengXu <1824677900@qq.com>",
   "scripts": {
     "dev": "vue-cli-service serve",
     "lint": "eslint --ext .js,.vue src",
@@ -17,8 +17,6 @@
   "dependencies": {
     "@turf/turf": "^6.5.0",
     "ant-design-vue": "^1.7.6",
-    "axios": "0.18.1",
-    "clipboard": "2.0.4",
     "codemirror": "5.45.0",
     "core-js": "3.6.5",
     "driver.js": "0.9.5",
@@ -96,7 +94,7 @@
     "last 2 versions"
   ],
   "bugs": {
-    "url": "https://github.com/PanJiaChen/vue-element-admin/issues"
+    "url": "https://github.com/PIPA12344/zgzDam2/issues"
   },
   "engines": {
     "node": ">=8.9",
@@ -125,7 +123,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/PanJiaChen/vue-element-admin.git"
+    "url": "git+https://github.com/PIPA12344/zgzDam2.git"
   },
   "eslintConfig": {
     "rules": {
